--- a/main.css
+++ b/main.css
@@ -35,6 +35,8 @@ body {
     padding: 1rem 0;
     text-align: center;
     display: flex;
+    margin-top: -0.8%;
+    margin-bottom: -0.8%;
 }
 
 .site-title {
@@ -57,6 +59,7 @@ body {
     align-items: center;
     flex-direction: column;
     margin-left: -8% ;
+
 
 }
 
@@ -171,15 +174,15 @@ body {
     font-size: 1rem;
 }
 
-.project_btn_container{
+.project_btn_container {
     display: flex;
     justify-content: center;
 }
+
 .project_btn {
     border-radius: 9px;
     background-color: #000000;
     border: none;
-    
     color: #fff;
     text-align: center;
     font-size: 32px;
@@ -189,9 +192,6 @@ body {
     cursor: pointer;
     margin: 36px;
     font-size: 1rem;
-    display: inline-block; /* Assurez-vous que le bouton est en ligne */
-
-    cursor: pointer;
     display: inline-block;
     position: relative;
     transition: 0.5s;
@@ -200,21 +200,54 @@ body {
 .project_btn:after {
     content: '»';
     position: absolute;
-    opacity: 0;  
+    opacity: 0;
     top: 12px;
     right: -20px;
     transition: 0.5s;
-  }
-  
-  .project_btn:hover{
+}
+
+.project_btn:hover {
     padding-right: 24px;
-    padding-left:8px;
-  }
-  
-  .project_btn:hover:after {
+    padding-left: 8px;
+}
+
+.project_btn:hover:after {
     opacity: 1;
     right: 10px;
-  }
+}
+
+.filtre_menu_container {
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.filter-btn {
+    background-color: #444;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    margin: 0 10px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.filter-btn:hover {
+    background-color: #666;
+}
+
+.filter-btn.active {
+    background-color: #888;
+}
+
+.project-item.show {
+    display: block; /* Show filtered projects */
+}
+
+.project-item.hide {
+    display: none; /* Hide non-filtered projects */
+}
+
 
 /* Styles pour la section À propos */
 .about_container{
@@ -290,8 +323,16 @@ body {
     flex-wrap: wrap; /* Allow items to wrap */
 }
 
+
+
 .container {
     flex-basis: 100%; /* Full width for the text container */
+    margin-bottom: -1%;
+}
+
+.container a {
+    color: #fff;
+    cursor: pointer;
 }
 
 .button-container {
@@ -368,10 +409,6 @@ body {
 }
 
 
-
-
-/* styles.css */
-
 /* Section d'accueil */
 .home-section {
     padding: 2rem 0;
@@ -436,6 +473,7 @@ body {
     padding: 1rem;
     flex: 1 1 calc(33% - 1rem);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    display: block;
 }
 
 .project-title {
