--- a/main.css
+++ b/main.css
@@ -582,14 +582,14 @@ progress {
     
 }
 progress::-webkit-progress-value {
-    background-color: #ff9d00;
+    background-color: #000000;
     border-radius: 20px;
 }
 progress::-moz-progress-bar {
     border-radius: 20px;
 }
 progress::-webkit-progress-bar {
-    background-color: #6f6f6f;
+    background-color: #cbcbcb;
     border-radius: 20px;
 }
 
@@ -617,10 +617,18 @@ span {
 .summary-title {
     font-size: 1.8rem;
     margin-bottom: 1rem;
-}
+} 
 
 .summary-description {
     font-size: 1rem;
+}
+
+.citation {
+    text-align: center;
+}
+.auteur {
+    margin-left: 65%;
+    text-decoration: underline;
 }
 
 /* Projets */
@@ -747,6 +755,16 @@ span {
     color: #fff;
 }
 
+.dark-mode progress::-webkit-progress-value {
+
+    background-color: #cbcbcb;
+}
+
+.dark-mode progress::-webkit-progress-bar {
+    background-color: #000000;
+}
+
+
 .dark-mode .project-item {
     background-color: #555;
     border-color: #666;
@@ -870,4 +888,145 @@ span {
         }
     }
     
+}
+/* LES PROJETS */
+
+.projet {
+    max-width: 90%;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+}
+.projet h1 {
+    color: #333;
+    text-align: center;
+}
+.projet h2, h3 {
+    color: #333;
+}
+.projet p.content {
+    margin: 20px 0;
+    text-align: justify;
+}
+.cadre {
+    margin: 1% 0;
+    padding: 1%;
+    display: flex;
+    align-items: flex-start;
+    gap: 20px;
+}
+
+.video {
+    flex: 1;
+    max-width: 60%;
+}
+
+.video video {
+    width: 122%;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+}
+
+.image-container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    max-width: 40%;
+}
+
+.image-container img {
+    background-color: #3ba30b;
+    margin-left: 32%;
+    width: 63%;
+
+    border: 1px solid #ddd;
+    border-radius: 8px;
+}
+
+.image1-container {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+    max-width: 40%;
+    margin-left:2%;
+}
+.image1-container img {
+    background-color: #3ba30b;
+    width: 80%;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+}
+
+.titleimg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%; /* Adjust as needed */
+}
+.titleimg img {
+    max-width: 100%; /* Adjust to prevent overflow */
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 60px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.9);
+}
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+}
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* Construction */
+.construction {
+    text-align: center;
+    margin-left: 2%;
+    margin-right: 2%;
+}
+
+.construction h1 {
+    font-size: 3em;
+    color: #000000;
+    margin-bottom: 20px;
+}
+
+.construction .underConstruction {
+    margin: 20px 0;
+}
+
+/* Canvas */
+#gameCanvas {
+    display: block;
+    margin: 0 auto;
+    border: 2px solid #333;
+    border-radius: 5px;
 }
