--- a/main.css
+++ b/main.css
@@ -548,6 +548,7 @@ body {
 }
 
 
+
 /* Section d'accueil */
 .home-section {
     padding: 2rem 0;
@@ -704,8 +705,16 @@ span {
     background-color: #555;
 }
 
+.dark-mode .projet{
+    background-color: #3d3d3d;
+}
+
 .dark-mode .site-main {
     background-color: #333;
+    color: #fff;
+}
+
+.dark-mode h1 {
     color: #fff;
 }
 
@@ -927,6 +936,7 @@ span {
     width: 122%;
     border: 1px solid #ddd;
     border-radius: 8px;
+    cursor: pointer;
 }
 
 .image-container {
@@ -941,7 +951,7 @@ span {
     background-color: #3ba30b;
     margin-left: 32%;
     width: 63%;
-
+    cursor: pointer;
     border: 1px solid #ddd;
     border-radius: 8px;
 }
@@ -955,6 +965,7 @@ span {
     margin-left:2%;
 }
 .image1-container img {
+    cursor: pointer;
     background-color: #3ba30b;
     width: 80%;
     border: 1px solid #ddd;
@@ -971,40 +982,68 @@ span {
     max-width: 100%; /* Adjust to prevent overflow */
 }
 
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    padding-top: 60px;
+/* Style pour le modal */
+#myModal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.9);
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    align-items: center; /* Vertically center */
+    justify-content: center; /* Horizontally center */
+
 }
-.modal-content {
+
+/* Style pour le contenu du modal */
+#myModal .modal-content {
+    top: 30%;
+    position: relative;
+    background-color: rgba(0, 0, 0, 0.5);
     margin: auto;
-    display: block;
-    width: 80%;
-    max-width: 700px;
+    padding: 30px;
+    border-radius: 20px;
+    width: 100%; /* Set the width of the modal */
+    max-width: 900px; /* Maximum width of the modal */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    animation-name: animatetop;
+    animation-duration: 0.4s;
 }
-.close {
+
+/* Animation pour le modal */
+@keyframes animatetop {
+    from {opacity:0}
+    to {opacity:1}
+}
+
+/* Style pour l'image dans le modal */
+#myModal #modalImage {
+    border-radius: 20px;
+    width: 100%; /* Full width */
+    height: auto; /* Maintain aspect ratio */
+}
+
+/* Style pour le bouton de fermeture */
+#myModal .close {
     position: absolute;
-    top: 15px;
-    right: 35px;
-    color: #f1f1f1;
-    font-size: 40px;
+    right: 10px;
+    top: 10px;
+    color: #ffffff;
+    font-size: 35px;
     font-weight: bold;
-    transition: 0.3s;
 }
-.close:hover,
-.close:focus {
-    color: #bbb;
+
+#myModal .close:hover,
+#myModal .close:focus {
+    color: #ff8000;
     text-decoration: none;
     cursor: pointer;
 }
+
 
 /* Construction */
 .construction {
