--- a/main.css
+++ b/main.css
@@ -459,7 +459,6 @@ body {
     color: #fff;
     text-align: center;
     padding: 1rem 0;
-    margin-top: 2rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -717,9 +716,12 @@ span {
 .dark-mode h1 {
     color: #fff;
 }
+.dark-mode .text-center {
+    color: #fff;
 
-.dark-mode .site-footer {
-    background-color: #333;
+}
+.dark-mode  .projet-titles {
+    color: #fff;
 }
 
 .dark-mode .darkmode_btn {
